--- a/code/src/components/Artist/Artist.css
+++ b/code/src/components/Artist/Artist.css
@@ -11,3 +11,7 @@ a {
     font: Helvetica;
     color: #a0a0a0;
    }
+
+a:hover {
+    text-decoration: underline;
+}
